[tool.poetry]
name = "snakes-cafe"
version = "0.1.0"
description = ""
authors = ["Clarissa P <clarissapamonicutt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
